[gd_scene load_steps=48 format=2]

[ext_resource path="res://Game/Textures/Spritesheet.png" type="Texture" id=1]
[ext_resource path="res://Game/Materials/OutlineBlack.tres" type="Material" id=2]
[ext_resource path="res://Game/Scripts/Player.gd" type="Script" id=3]
[ext_resource path="res://Game/Prefabs/RocketLauncher.tscn" type="PackedScene" id=5]
[ext_resource path="res://Game/Sounds/Helicopter.mp3" type="AudioStream" id=6]
[ext_resource path="res://Game/Textures/Crossair.png" type="Texture" id=7]
[ext_resource path="res://Game/Materials/Blur.tres" type="Material" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 21.5, 59 )

[sub_resource type="CircleShape2D" id=2]
radius = 90.0

[sub_resource type="CircleShape2D" id=41]
radius = 220.0

[sub_resource type="Animation" id=42]
length = 0.1
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 4, 5 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Shadow:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 4, 5 ]
}

[sub_resource type="Animation" id=43]
length = 0.1
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Shadow:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=44]
length = 0.1
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 2, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Shadow:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 2, 3 ]
}

[sub_resource type="Animation" id=45]
length = 0.1
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 6, 7 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Shadow:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 6, 7 ]
}

[sub_resource type="Animation" id=46]
length = 0.1
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 12, 13 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Shadow:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 12, 13 ]
}

[sub_resource type="Animation" id=47]
length = 0.1
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 8, 9 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Shadow:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 8, 9 ]
}

[sub_resource type="Animation" id=48]
length = 0.1
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 10, 11 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Shadow:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 10, 11 ]
}

[sub_resource type="Animation" id=49]
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 18, 19 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Shadow:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 18, 19 ]
}

[sub_resource type="Animation" id=50]
length = 0.1
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 14, 15 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Shadow:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 14, 15 ]
}

[sub_resource type="Animation" id=51]
length = 0.1
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 16, 17 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Shadow:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 16, 17 ]
}

[sub_resource type="Animation" id=52]
length = 0.1
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 24, 25 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Shadow:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 24, 25 ]
}

[sub_resource type="Animation" id=53]
length = 0.1
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 20, 21 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Shadow:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 20, 21 ]
}

[sub_resource type="Animation" id=54]
length = 0.1
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 22, 23 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Shadow:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 22, 23 ]
}

[sub_resource type="Animation" id=55]
length = 0.1
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 26, 27 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Shadow:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 26, 27 ]
}

[sub_resource type="Animation" id=56]
length = 0.1
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 28, 29 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Shadow:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 28, 29 ]
}

[sub_resource type="Animation" id=57]
length = 0.1
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 30, 31 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Shadow:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 30, 31 ]
}

[sub_resource type="Animation" id=58]
length = 0.1
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 32, 33 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Shadow:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 32, 33 ]
}

[sub_resource type="AnimationNodeAnimation" id=59]
animation = "Centered"

[sub_resource type="AnimationNodeAnimation" id=60]
animation = "Back"

[sub_resource type="AnimationNodeAnimation" id=61]
animation = "Half Back Right"

[sub_resource type="AnimationNodeAnimation" id=62]
animation = "Back Left"

[sub_resource type="AnimationNodeAnimation" id=63]
animation = "Forward Left"

[sub_resource type="AnimationNodeAnimation" id=64]
animation = "Forward Right"

[sub_resource type="AnimationNodeAnimation" id=65]
animation = "Half Back Left"

[sub_resource type="AnimationNodeAnimation" id=66]
animation = "Half Forward Left"

[sub_resource type="AnimationNodeAnimation" id=67]
animation = "Half Forward Right"

[sub_resource type="AnimationNodeAnimation" id=68]
animation = "Right"

[sub_resource type="AnimationNodeAnimation" id=69]
animation = "Forward"

[sub_resource type="AnimationNodeAnimation" id=70]
animation = "Left"

[sub_resource type="AnimationNodeAnimation" id=71]
animation = "Half Back"

[sub_resource type="AnimationNodeAnimation" id=72]
animation = "Half Forward"

[sub_resource type="AnimationNodeAnimation" id=73]
animation = "Half Right"

[sub_resource type="AnimationNodeAnimation" id=74]
animation = "Half Left"

[sub_resource type="AnimationNodeAnimation" id=75]
animation = "Back Right"

[sub_resource type="AnimationNodeBlendSpace2D" id=76]
blend_point_0/node = SubResource( 59 )
blend_point_0/pos = Vector2( 0, 0 )
blend_point_1/node = SubResource( 60 )
blend_point_1/pos = Vector2( 0, 1 )
blend_point_2/node = SubResource( 68 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 69 )
blend_point_3/pos = Vector2( 0, -1 )
blend_point_4/node = SubResource( 70 )
blend_point_4/pos = Vector2( -1, 0 )
blend_point_5/node = SubResource( 71 )
blend_point_5/pos = Vector2( 0, 0.2 )
blend_point_6/node = SubResource( 72 )
blend_point_6/pos = Vector2( 0, -0.2 )
blend_point_7/node = SubResource( 73 )
blend_point_7/pos = Vector2( 0.2, 0 )
blend_point_8/node = SubResource( 74 )
blend_point_8/pos = Vector2( -0.2, 0 )
blend_point_9/node = SubResource( 75 )
blend_point_9/pos = Vector2( 0.7, 0.7 )
blend_point_10/node = SubResource( 61 )
blend_point_10/pos = Vector2( 0.2, 0.2 )
blend_point_11/node = SubResource( 62 )
blend_point_11/pos = Vector2( -0.7, 0.7 )
blend_point_12/node = SubResource( 63 )
blend_point_12/pos = Vector2( -0.7, -0.7 )
blend_point_13/node = SubResource( 64 )
blend_point_13/pos = Vector2( 0.7, -0.7 )
blend_point_14/node = SubResource( 65 )
blend_point_14/pos = Vector2( -0.2, 0.2 )
blend_point_15/node = SubResource( 66 )
blend_point_15/pos = Vector2( -0.2, -0.2 )
blend_point_16/node = SubResource( 67 )
blend_point_16/pos = Vector2( 0.2, -0.2 )
blend_mode = 1

[sub_resource type="AnimationNodeStateMachine" id=77]
states/Direction/node = SubResource( 76 )
states/Direction/position = Vector2( 474, 58 )
start_node = "Direction"
graph_offset = Vector2( 116, 2 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=40]

[node name="Player" type="Area2D"]
input_pickable = false
gravity_vec = Vector2( 0, 0 )
gravity = 0.0
collision_mask = 36
script = ExtResource( 3 )

[node name="Hitbox" type="CollisionShape2D" parent="."]
position = Vector2( -0.5, 11 )
shape = SubResource( 1 )

[node name="Sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
autoplay = true

[node name="Shadow" type="Sprite" parent="."]
self_modulate = Color( 0, 0, 0, 1 )
material = ExtResource( 8 )
position = Vector2( -66.6875, -70.75 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 1 )
hframes = 6
vframes = 6
frame = 7

[node name="Crossair" type="Sprite" parent="."]
position = Vector2( 0, -200 )
rotation = -1.32419
texture = ExtResource( 7 )

[node name="Highlight" type="Area2D" parent="."]
position = Vector2( 0, -200 )
rotation = -1.32419
input_pickable = false
gravity_vec = Vector2( 0, 0 )
gravity = 0.0
monitoring = false
collision_layer = 256
collision_mask = 0

[node name="HighlightArea" type="CollisionShape2D" parent="Highlight"]
shape = SubResource( 2 )

[node name="PreviewPusher" type="KinematicBody2D" parent="."]
position = Vector2( 0, -200 )
collision_layer = 512
collision_mask = 512
motion/sync_to_physics = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="PreviewPusher"]
shape = SubResource( 41 )

[node name="Body" type="Sprite" parent="."]
material = ExtResource( 2 )
texture = ExtResource( 1 )
hframes = 6
vframes = 6
frame = 7

[node name="RocketLauncher1" parent="." instance=ExtResource( 5 )]
position = Vector2( 19, 11 )

[node name="RocketLauncher2" parent="." instance=ExtResource( 5 )]
position = Vector2( -19, 11 )

[node name="RocketTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
method_call_mode = 1
anims/Back = SubResource( 42 )
"anims/Back Left" = SubResource( 43 )
"anims/Back Right" = SubResource( 44 )
anims/Centered = SubResource( 45 )
anims/Forward = SubResource( 46 )
"anims/Forward Left" = SubResource( 47 )
"anims/Forward Right" = SubResource( 48 )
"anims/Half Back" = SubResource( 49 )
"anims/Half Back Left" = SubResource( 50 )
"anims/Half Back Right" = SubResource( 51 )
"anims/Half Forward" = SubResource( 52 )
"anims/Half Forward Left" = SubResource( 53 )
"anims/Half Forward Right" = SubResource( 54 )
"anims/Half Left" = SubResource( 55 )
"anims/Half Right" = SubResource( 56 )
anims/Left = SubResource( 57 )
anims/Right = SubResource( 58 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 77 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 40 )
parameters/Direction/blend_position = Vector2( -0.00392926, 0.0126582 )
